# SSDD_AntonioCampalloGomez_Blob

./: .gitignore  README.md  main.py  pyproject.toml
config/: blob.config
icedrive_blob/: app.py  blob.py  client.py  discovery.py
pruebas/: PruebaCliente  enlaces.json
tests/: testUnitario.py
